# comrade-next

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-pytest.yml  main.yml  release-tagger  release-tagger.yml
comrade/: __init__.py  bot.py
comrade/core/: augmentations.py  bot_subclass.py  comrade_client.py  configuration.py  const.py  init_logging.py  logging_config.py  relay.py  self_restarter.py  updater.py
comrade/core/relay_system/: __init__.py  bot_mixin.py  cache_mixin.py  relay_main.py  update_hook.py  utils.py
comrade/lib/: booru_lib.py  datetime_utils.py  file_utils.py  markdown_utils.py  relay.py  reminders.py  tenor.py  testing_utils.py  updater_utils.py
comrade/lib/booru_ext/: __init__.py  const.py  filters.py  monkey_patches.py  search.py  structures.py
comrade/lib/discord_utils/: __init__.py  ctx_tricks.py  custom_paginators.py  safer_embeds.py  test_utils.py  webhook_tricks.py
comrade/lib/emotes/: finder.py  structures.py
comrade/lib/nhentai/: element_parser.py  page_parser.py  parser.py  proxies.py  regex.py  search.py  sources.py  structures.py  text_filters.py  urls.py
comrade/lib/online/: checks.py  echo.py  webhook_echo.py
comrade/lib/sound_system/: __init__.py  (+2 more)
comrade/modules/: booru.py  booru_cmds.py  emote_system.py  helpful_converters.py  maintainence.py  nhentai_cmds.py  reminder_cmds.py  reminders.py  role_manager.py  soundboard.py  telemetry.py  util_cmds.py  voice_recorder.py
scripts/migration/: reminders_migration.py
tests/: conftest.py  test_emoji_lib.py
tests/core/: conftest.py  test_augmentations.py  test_notify_on_restart.py  test_relay.py  test_updater.py
tests/lib/: conftest.py  test_booru.py  test_du_ctx_tricks.py  test_du_safer_embeds.py  test_emoji.py  test_file_utils.py  test_markdown_utils.py  test_nhentai.py  test_reminder.py  test_sound_system.py  test_tenor.py  test_text_transformers.py  test_text_utils.py
tests/lib_standalone/: test_booru.py  test_emoji.py  test_markdown_utils.py  test_tenor.py  test_text_transformers.py
tests/modules/: conftest.py  test_booru_cmds.py  test_emote_v5.py  test_helpful_converters.py  test_maintainence.py  test_nhentai_gallery.py  test_nhentai_gallery_basic.py  test_nhentai_gallery_multi.py  test_nhentai_gallery_multi_gallery.py  test_nhentai_search.py  test_nhentai_search_basic.py  test_nhentai_search_multi.py  test_relay.py  test_reminder.py  test_reminder_cmds.py  test_role_manager.py  test_telemetry.py  test_z_maintainence.py
tests/online/: conftest.py  test_emoji_v5.py  test_emote_v5.py  test_nhentai_gallery.py  test_nhentai_search.py  test_reminder.py
(+25 files in other folders)
