[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "comrade"
description = "A more refined bot for my needs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "discord-py-interactions[speedup,voice,jurigged]",
    "python-dotenv",
    "pymongo",
    "dnspython",
    "beautifulsoup4",
    "pydub",
    "arrow",
    "booru"
]

[project.urls]
homepage = "https://github.com/itchono/comrade-next"

[project.scripts]
comrade = "comrade.bot:main"

[tool.setuptools_scm]
write_to = "comrade/_version.py"

[tool.setuptools]
packages = ["comrade"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 80

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
