[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "comrade"
description = "A more refined bot for my needs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "interactions.py[speedup,voice,jurigged] == 5.6.0",
    "pymongo >= 4.3",
    "beautifulsoup4 >= 4",
    "pydub >= 0.25",
    "arrow >= 1.2",
    "booru >= 1.0",
    "lxml >= 4.9",
    "python-decouple >= 3.8",
    "levenshtein >= 0.21",
]

[project.urls]
homepage = "https://github.com/itchono/comrade-next"

[project.scripts]
comrade = "comrade.bot:main"

[project.optional-dependencies]
test = [
    "pytest >= 7.3",
    "pytest-asyncio >= 0.21",
    "pytest-cov >= 4.1"
]

[tool.setuptools_scm]
write_to = "comrade/_version.py"

[tool.setuptools]
packages = ["comrade"]

[tool.black]
line-length = 80

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"
markers = ["bot: marks tests as requiring a bot token",
           "online: marks tests as requiring an internet connection"]

